# elrond

./: Cargo.toml  README.md
docs/: index.html  search-index.js
docs/elrond/: ElfAbi.t.html  ElfMagicNumber.t.html  Elf_Off.t.html  Elf_SHalf.t.html  Elf_Word.t.html  Elf_XWord.t.html  Fault.t.html  FileType.t.html  PHDR.t.html  RamFlags.t.html  SectionAttributes.t.html  SymBinding.t.html  SymProt.t.html  enum.ABI.html  enum.Arch.html  enum.ElfAbi.html  enum.ElfArch.html  enum.ElfClass.html  enum.ElfEndian.html  enum.ElfFileType.html  enum.Elf_Addr.html  enum.Elf_Off.html  enum.Elf_VarWord.html  enum.Fault.html  enum.IResult.html  enum.Kind.html  enum.RamFlags.html  enum.SectMemAttrib.html  enum.SectionKind.html  enum.SectionType.html  enum.SegFlag.html  enum.SymBinding.html  enum.SymProt.html  enum.SymType.html  enum.VarSize.html  fn.parse_elf.html  generate_reader.m.html  index.html  macro.build_enum!.html  macro.build_enum.html  (+36 more)
src/: lib.rs  macros.rs  value.rs  varsize.rs
src/header/: abi.rs  arch.rs  endian.rs  err.txt  file_type.rs  header.rs  header32.rs  header64.rs  kind.rs  mod.rs  traits.rs  wordsize.rs
src/magic/: abi.rs  class.rs  endian.rs  magic.rs  mod.rs  traits.rs
src/note/: mod.rs
src/phdr/: flags.rs  mod.rs  ph_type.rs  phdr.rs  phdr32.rs  phdr64.rs  traits.rs
src/pht/: mod.rs
src/relocation/: arcdata.rs  mod.rs  rel32.rs  rel64.rs
src/section/: attributes.rs  kind.rs  mod.rs  section.rs  section32.rs  section64.rs  section_type.rs  traits.rs
src/symtable/: 2  bind.rs  mod.rs  symprot.rs  symtable.rs  symtable32.rs  symtable64.rs  (+2 more)
(+205 files in other folders)
