[package]
name = "elrond"
version = "0.0.2"
authors = ["William Cody Laeder <codylaeder@gmail.com>"]
repository = "https://github.com/valarauca/elrond"
homepage = "https://github.com/valarauca/elrdon"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://valarauca.github.io/elrond/elrond/index.html"
description = "embryonic Elf Parser written in NOM"
keywords = ["elf","parser","nom"]

[dependencies]
nom = "2.0.*"
byteorder = "1.0.0"
