[package]
name = "elrond"
version = "1.0.0"
authors = ["valarauca <codylaeder@gmail.com>"]
description = "Standard conformant elf parser"
hompage = "https://github.com/valarauca/elrond"
repository = "https://github.com/valarauca/elrond"
documentation = "https://valarauca.github.io/elrond/elrond/index.html"
readme = "README.md"
keywords = ["elf", "parser", "binary"]
license = "Apache-2.0"

[dependencies]
nom = { version = "3.2.0", features = ["verbose-errors","std"] }
